# test-deprecated-30dec24

bluesky-automation/: .gitignore  bot.py  bot_manager.py  database.py  main.py  models.py  pyproject.toml  token.pickle  web_search.py  writing_analyzer.py
bluesky-automation/static/: gateway.css  styles.css
bluesky-automation/templates/: base.html  dashboard.html  drafts.html  index.html  login.html  onboarding.html  settings.html  signup.html  writing_style.html
python_projects_grocery_webapp/backend/: .gitignore  orders_dao.py  products_dao.py  pyproject.toml  server.py  sql_connection.py  users_dao.py
python_projects_grocery_webapp/ui/: index.html  login.html  register.html
python_projects_grocery_webapp/ui/js/custom/: common.js  login.js  register.js
seqnece diag/preferences/: delete-v1.0-preferences.seqdiag  get-v1.0-preferences-id.seqdiag  get-v1.0-preferences.seqdiag  patch-v1.0-preferences-id.seqdiag  post-v1.0-preferences.seqdiag
seqnece diag/user/: delete-v1.0-user.seqdiag  get-v1.0-user-id.seqdiag  get-v1.0-user.seqdiag  patch-v1.0-user-id.seqdiag  post-v1.0-user.seqdiag
supabase_callback_reference/: package.json  pnpm-lock.yaml
supabase_callback_reference/src/: index.ts
yt-test-node/: client_secret_172892498928-9t6med904ivd94vcaaq10gcsfka9fjhs.apps.googleusercontent.com.json  package.json  pnpm-lock.yaml  server.js
